--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@ background :#FFF5EE;
 <h2> Form Login : </h2>
 
  <form action="inputdata.html">
- <label for="inputnama"> masukan nama :</label <br>
+ <label for="inputnama"> masukan nama :</label> <br>
  <input type="text" value="Awali Nurul"> <br>
  <label for="inputpassword"> masukkan password :</label> <br>
  <input type="password" value="awali12345"> <br>
