--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Menu</a></li>
-      <li><a href="form.html">Login</a></li>
+      <li><a class="active" href="index.html"> Home </a></li>
+      <li><a href="presensi.html"> Presensi </a></li>
+       <li><a href="formdaftar.html"> Daftar </a></li>
+      <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
   
