--- a/form.html
+++ b/form.html
@@ -1,42 +1,149 @@
-<html>
+<html lang="en">
 <head>
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Copperplate, Lucida Console;
+}
+
+/* Style the header */
+header {
+  background-color: #F0F8FF;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: black;
+}
+
+
+/* Create two columns/boxes that floats next to each other */
 ul {
-backround :#FF69B4;
-font-family: Times New Roman, Monaco;
-}
-h2 {
-background :#FFC0CB;
-font-family :Lucida Console, monospace;
-}
-form {
-background :#FFF5EE;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color:#F0F8FF;
 
-} 
-  </style
- </head>
-<body> 
-<h2> Seni Dongkrek <h2>
+li {
+  float: left;
+}
 
-<ul>
-		<li><a href="#">Home</a></li>
-		<li><a href="#">Menu</a></li>
-		<li><a href="inputdata.html">Kembali</a></li>
-	</ul>
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: #111;
+}
+
+.active {
+  background-color: #04AA6D;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 100%;
+  background-color: #F0F8FF;
+  height: 800px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #F0F8FF;
+  padding: 1px;
+  text-align: center;
+  color: black;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
+</head>
+<body>
+
+
+<header>
+  <h2> Dongkrek </h2>
 </header>
 
 <section>
-<h2> Form Login : </h2>
+  <nav>
+    <ul>
+     <li><a class="active" href="index.html"> Home </a></li>
+      <li><a href="presensi.html"> Presensi </a></li>
+       <li><a href="formdaftar.html"> Daftar </a></li>
+      <li style="float:left"><a href="Login.html"> Login </a></li>
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>FORM DAFTAR </h1>
+ <form>
+ <label>Nama Depan </label>
+ <input type="text"> 
+ <label>Nama Belakang </label>
+ <input type="text"> <br><br>
+ <label> Tempat Lahir</label>
+ <input list="Tempat Lahir">
+ <datalist id="Tempat Lahir">
+  <option value="Kab.Madiun">
+  <option value="Kab.Ngawi">
+  <option value="Kab.Magetan">
+  <option value="Kab.Pacitan">
+  </datalist> <br><br>
 
- <form action="inputdata.html">
- <label for="inputnama"> masukan nama :</label> <br>
- <input type="text" value="Awali Nurul"> <br>
- <label for="inputpassword"> masukkan password :</label> <br>
- <input type="password" value="awali12345"> <br>
- <input type="submit" value="login">
+  <label> Tanggal Lahir</label>
+  <input type="date"> <br><br>
+
+  <label> Jenis Kelamin</label>
+  <input type="radio" id="Laki-Laki">
+  <label> Laki-Laki </label>
+  <input type="radio" id="Perempuan">
+  <label> Perempuan </label> <br><br>
+
+  <label> Hobby </label>
+  <input type="checkbox" id="Olahraga" value="Olahraga">
+  <label> Olahraga </label>
+  <input type="checkbox" id="Membaca" value="Membaca">
+  <label> Membaca </label>
+  <input type="checkbox" id="Kluyuran" value="Kluyuran">
+  <label> Kluyuran </label> <br><br>
+  <label> Alamat </label>
+  <textarea rows="3"> </textarea> <br><br>
+
+  <input type="Submit" value="Simpan">
+  <input type="Reset">
+
  </form>
- </section>
- 
- </body>
- 
- <html>
+  </article>
+</section>
+
+<footer>
+  <p> Crated by <br> Awali Nurul </p>
+</footer>
+
+</body>
+</html>
