--- a/form.html
+++ b/form.html
@@ -94,7 +94,7 @@ footer {
     <ul>
      <li><a class="active" href="index.html"> Home </a></li>
       <li><a href="presensi.html"> Presensi </a></li>
-       <li><a href="formdaftar.html"> Daftar </a></li>
+       <li><a href="form.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
