--- a/form.html
+++ b/form.html
@@ -1,10 +1,8 @@
-<html lang="en">
+<html>
 <head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
+<tsyle>
+ *{
+
   box-sizing: border-box;
 }
 
@@ -12,7 +10,6 @@ body {
   font-family: Copperplate, Lucida Console;
 }
 
-/* Style the header */
 header {
   background-color: #F0F8FF;
   padding: 30px;
@@ -21,8 +18,6 @@ header {
   color: black;
 }
 
-
-/* Create two columns/boxes that floats next to each other */
 ul {
   list-style-type: none;
   margin: 0;
@@ -55,17 +50,15 @@ article {
   padding: 20px;
   width: 100%;
   background-color: #F0F8FF;
-  height: 800px; /* only for demonstration, should be removed */
+  height: 800px; 
 }
 
-/* Clear floats after the columns */
 section::after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* Style the footer */
 footer {
   background-color: #F0F8FF;
   padding: 1px;
@@ -73,7 +66,6 @@ footer {
   color: black;
 }
 
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
   nav, article {
     width: 100%;
@@ -86,15 +78,13 @@ footer {
 
 
 <header>
-  <h2> Dongkrek </h2>
+  <h2> Form Login : </h2>
 </header>
 
-<section>
-  <nav>
-    <ul>
-     <li><a class="active" href="index.html"> Home </a></li>
-      <li><a href="presensi.html"> Presensi </a></li>
-       <li><a href="form.html"> Daftar </a></li>
+       <ul>
+     <li><a href="index.html"> Home </a></li>
+   <li><a class="active" href="form.html"> Daftar </a></li>
+       <li><a href="presensi.html"> Presensi </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
