--- a/form.html
+++ b/form.html
@@ -1,8 +1,10 @@
-<html>
+<html lang="en">
 <head>
-<tsyle>
- *{
-
+<title>CSS Template</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
   box-sizing: border-box;
 }
 
@@ -10,20 +12,27 @@ body {
   font-family: Copperplate, Lucida Console;
 }
 
+/* Style the header */
 header {
-  background-color: #F0F8FF;
+  background-color: white;
   padding: 30px;
   text-align: center;
   font-size: 35px;
   color: black;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
 }
 
+
+/* Create two columns/boxes that floats next to each other */
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color:#F0F8FF;
+  background-color: #FFB6C1;
+}
 
 li {
   float: left;
@@ -38,34 +47,37 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: #111;
+  background-color: white;
 }
 
 .active {
-  background-color: #04AA6D;
+  background-color: black;
 }
 
 article {
   float: left;
   padding: 20px;
   width: 100%;
-  background-color: #F0F8FF;
-  height: 800px; 
+  background-color: white;
+  height: 800px; /* only for demonstration, should be removed */
 }
 
+/* Clear floats after the columns */
 section::after {
   content: "";
   display: table;
   clear: both;
 }
 
+/* Style the footer */
 footer {
-  background-color: #F0F8FF;
+  background-color: white;
   padding: 1px;
   text-align: center;
   color: black;
 }
 
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 600px) {
   nav, article {
     width: 100%;
@@ -78,13 +90,15 @@ footer {
 
 
 <header>
-  <h2> Form Login : </h2>
+  <h2> Data Kelas </h2>
 </header>
 
-       <ul>
-     <li><a href="index.html"> Home </a></li>
-   <li><a class="active" href="form.html"> Daftar </a></li>
-       <li><a href="presensi.html"> Presensi </a></li>
+<section>
+  <nav>
+    <ul>
+      <li><a class="active" href="index.html"> Home </a></li>
+      <li><a href="presensi.html"> Presensi </a></li>
+       <li><a href="formdaftar.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
