--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>CSS Template</title>
@@ -10,43 +9,57 @@
 }
 
 body {
-  font-family: Arial, Helvetica, Copperplate;
+  font-family: Copperplate, Lucida Console;
 }
 
 /* Style the header */
 header {
-  background-color: #6495ED;
+  background-color: white;
   padding: 30px;
   text-align: center;
   font-size: 35px;
   color: black;
-  background-image:url("Dongkrek1.jpg");
-  background-repeat:no-repeat;
-  background-attachment:fixed;
-  background-size:cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
 }
+
 
 /* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: #FFF8DC;
-  padding: 20px;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #FFB6C1;
 }
 
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: white;
+}
+
+.active {
+  background-color: black;
 }
 
 article {
   float: left;
   padding: 20px;
-  width: 70%;
-  background-color: #E9967A;
-  height: 300px; /* only for demonstration, should be removed */
+  width: 100%;
+  background-color: white;
+  height: 800px; /* only for demonstration, should be removed */
 }
 
 /* Clear floats after the columns */
@@ -58,10 +71,10 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #6495ED;
-  padding: 10px;
+  background-color: white;
+  padding: 1px;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
@@ -75,8 +88,9 @@ footer {
 </head>
 <body>
 
+
 <header>
-  <h2>Dongkrek</h2>
+  <h2> Data Kelas </h2>
 </header>
 
 <section>
@@ -88,8 +102,8 @@ footer {
       <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
-  
-  <article>
+
+<article>
     <h1>Seni</h1>
     <p>Kesenian Dongkrek lahir sekitar tahun 1867 di Caruban yang saat ini berganti nama menjadi Kecamatan Mejayan. Dongkrek dipopulerkan oleh Raden Ngabehi Lo Prawirodipuro yang saat itu menjabat sebagai Demang atau Kepala Desa.</p>
     <p>Dongrek sendiri diberi nama karena alat musik yang unik alat musik yang dipakai adalah gendang yang menghasilkan suara "Gong" dan alat musik dari kayu yang bergerigi sehingga saat di bunyikan bersuara "Krek".</p>
