--- a/form.html
+++ b/form.html
@@ -96,9 +96,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a class="active" href="index.html"> Home </a></li>
+      <li><a href="active" href="index.html"> Home </a></li>
       <li><a href="presensi.html"> Presensi </a></li>
-       <li><a href="formdaftar.html"> Daftar </a></li>
+       <li><a class="formdaftar.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
