--- a/form.html
+++ b/form.html
@@ -98,7 +98,7 @@ footer {
     <ul>
       <li><a href="active" href="index.html"> Home </a></li>
       <li><a href="presensi.html"> Presensi </a></li>
-       <li><a class="formdaftar.html"> Daftar </a></li>
+       <li><a class="form.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
     </ul>
   </nav>
