--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ footer {
       <li><a href="presensi.html"> Presensi </a></li>
        <li><a href="formdaftar.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
-      <li><a hraf="https://sites.google.com/view/awali12rpl1/make-up"></a>
+      <a hraf="https://sites.google.com/view/awali12rpl1/make-up">membuat website di hp</a>
     </ul>
   </nav>
 
