--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <body>
     
     <h1> Hai Awali <h1>
+      <a class="active" href="index.html"> Home </a></li>
+      <li><a href="presensi.html"> Presensi </a></li>
+       <li><a href="formdaftar.html"> Daftar </a></li>
+      <li style="float:left"><a href="Login.html"> Login </a></li>
       <a href="https://sites.google.com/view/awali12rpl1/make-up">Membuat website di hp </a>
       </body>
       
