--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     
     <h1> Hai Awali <h1>
-      <a class="active" href="index.html"> Home </a></li>
+      <a class="active" href="menu.html"> Home </a></li>
       <li><a href="presensi.html"> Presensi </a></li>
        <li><a href="formdaftar.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
