--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a class="active" href="menu.html"> Home </a></li>
+      <li><a class="active" href="index.html"> Home </a></li>
       <li><a href="presensi.html"> Presensi </a></li>
        <li><a href="formdaftar.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
