--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
        <li><a href="formdaftar.html"> Daftar </a></li>
       <li style="float:left"><a href="Login.html"> Login </a></li>
       <a href="https://sites.google.com/view/awali12rpl1/make-up">Membuat website di hp </a>
+      <a href="file:///C:/awali/bootstrap-potofolio-gh-pages/index.html">bootstrap </a>
       </body>
       
       
