--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <a class="active" href="menu.html"> Home </a></li>
       <li><a href="presensi.html"> Presensi </a></li>
        <li><a href="formdaftar.html"> Daftar </a></li>
-      <li style="float:left"><a href="Login.html"> Login </a></li>
+      <li style="float:left"><a href="login.html"> Login </a></li>
       <a href="https://sites.google.com/view/awali12rpl1/make-up">Membuat website di hp </a>
       <a href="file:///C:/awali/bootstrap-potofolio-gh-pages/index.html">bootstrap </a>
       
