--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <body>
     
     <h1> Hai Awali </h1>
-    <a class="active" href="menu1.html">Home</a>
+    <a class="active" href="menu.html">Home</a>
     <a href="form.html">Daftar</a>
     <a href="presensi.html">Presensi</a>
     <a href="Login.html">Login</a>
     <h5> tugas 8 november 2021 </h5>
-    <a href="             ">membuat website di hp</a>
+    <a href="https://sites.google.com/view/awali12rpl1/make-up">membuat website di hp</a>
   </body>
   
   
